--- a/1 - Javascript básico/Window.html
+++ b/1 - Javascript básico/Window.html
@@ -21,6 +21,7 @@
         window.alert('Isto é um alerta');
 
         // Cria uma janela de confirmação. Aparece dois botões: "confirmar" & "cancelar"
+        // Caso o usuário clique em "cancelar", é retornado o valor boolean "false", caso seja "confirmar", é retornado "true".
         window.confirm('Clique em "ok" para confirmar');
     </script>
 </body>
