--- a/1 - Javascript básico/Window.html
+++ b/1 - Javascript básico/Window.html
@@ -23,6 +23,11 @@
         // Cria uma janela de confirmação. Aparece dois botões: "confirmar" & "cancelar"
         // Caso o usuário clique em "cancelar", é retornado o valor boolean "false", caso seja "confirmar", é retornado "true".
         window.confirm('Clique em "ok" para confirmar');
+
+
+        // 
+        let a = window.prompt('Type something')
+        a === 'oi'? window.alert('cu') : alert('dsds');
     </script>
 </body>
 </html>
