--- a/1 - Javascript básico/Window.html
+++ b/1 - Javascript básico/Window.html
@@ -25,9 +25,8 @@
         window.confirm('Clique em "ok" para confirmar');
 
 
-        // 
-        let a = window.prompt('Type something')
-        a === 'oi'? window.alert('cu') : alert('dsds');
+        // Cria uma janela onde o usuário pode inserir caracteres.
+        window.prompt('Digite seu nome.:')
     </script>
 </body>
 </html>
