--- a/1 - Javascript básico/Window.html
+++ b/1 - Javascript básico/Window.html
@@ -22,7 +22,7 @@
 
         // Cria uma janela de confirmação. Aparece dois botões: "confirmar" & "cancelar"
         // Caso o usuário clique em "cancelar", é retornado o valor boolean "false", caso seja "confirmar", é retornado "true".
-        window.confirm('Clique em "ok" para confirmar');
+        let test = window.confirm('Clique em "ok" para confirmar');
 
 
         // Cria uma janela onde o usuário pode inserir caracteres.
