--- a/1 - Javascript básico/Window.html
+++ b/1 - Javascript básico/Window.html
@@ -26,7 +26,12 @@
 
 
         // Cria uma janela onde o usuário pode inserir caracteres.
-        window.prompt('Digite seu nome.:')
+        // window.prompt('Digite seu nome.:')
+
+
+        const num1 = Number(window.prompt('Type num1:'))
+        const num2 = Number(window.prompt('Type num2:'))
+        window.alert(num1 + num2);
     </script>
 </body>
 </html>
