--- a/1 - Javascript básico/Excercises/window.html
+++ b/1 - Javascript básico/Excercises/window.html
@@ -12,7 +12,7 @@
         const saldoCofre_2 = Number(window.prompt('Digite do cofre 02.:'))
 
         const saldoTotal = saldoCofre_1 + saldoCofre_2
-        window.alert(`Você possui  ${saldoTotal.toLocaleString('pt-BR',{style:'currency',currency:'BRL'})} `);
+        window.alert(`Juntando ambas as contas, você possui um total de ${saldoTotal.toLocaleString('pt-BR',{style:'currency',currency:'BRL'})} `);
     </script>
 </body>
 </html>
