--- a/1 - Javascript básico/Excercises/strings.html
+++ b/1 - Javascript básico/Excercises/strings.html
@@ -41,7 +41,7 @@
         const name = window.prompt('Digite seu nome.:')
         const age = window.prompt('Digite sua idade.:')
 
-        let pessoaNome = document.body
+        let pessoaNome = document.getElementsByClassName('putName')
         pessoaNome.innerHTML = name
     </script>
 </body>
