--- a/1 - Javascript básico/Excercises/strings.html
+++ b/1 - Javascript básico/Excercises/strings.html
@@ -24,23 +24,24 @@
         }
         h1{
             margin: 50px 0 100px 0;
+            color:rgb(76, 47, 241)
         }
         h2 {
-            color: white;
+            color: rgb(247, 245, 245);
             padding: 20px;
         }
-        putData{
-            color: rgba(128, 128, 128, 0.785);
-        }
+
         span{
             display: block;
+            color: rgba(128, 128, 128, 0.785);
+
         }
     </style>
 </head>
 <body>
     <h1>Dados pessoais </h1>
 
-    <h2>Nome completo: <span class="putName putData"></span></h2>
+    <h2>Nome completo: <span id="nomeCompleto"></span></h2>
 
     <h2>Quantidade de letras do seu nome: <span id="comprimento"> </span> </h2>
     <h2>A segunda letra do seu nome é: <span id="segundaLetra"> </span> </h2>
@@ -55,6 +56,7 @@
     <script>
         const name = window.prompt('Digite seu nome.:')
 
+        document.getElementById('nomeCompleto').innerHTML = name;
         document.getElementById('comprimento').innerHTML = name.replaceAll(' ', '').length; 
         document.getElementById('segundaLetra').innerHTML = name[1] === undefined? 'Seu nome possui apenas uma letra' : name[1]; 
         document.getElementById('Ultimas3Letras').innerHTML = name.slice(-3);
