--- a/1 - Javascript básico/Excercises/strings.html
+++ b/1 - Javascript básico/Excercises/strings.html
@@ -55,7 +55,9 @@
 
     <script>
         const name = window.prompt('Digite seu nome.:')
+        const age = Number.parseInt(window.prompt('Digte idfade'));
 
+        alert(typeof age === Number? 'teste' : 'insira uma idade válida')
         document.getElementById('nomeCompleto').innerHTML = name;
         document.getElementById('comprimento').innerHTML = name.replaceAll(' ', '').length; 
         document.getElementById('segundaLetra').innerHTML = typeof name[1] === number? 'Seu nome não possui letras' : name[1]; 
@@ -66,10 +68,6 @@
         document.getElementById('nomePalavras').innerHTML = name.split(' '); 
         document.getElementById('upper').innerHTML = name.toUpperCase();
         document.getElementById('lower').innerHTML = name.toLowerCase(); 
-
-
-
-
 
     </script>
 </body>
