--- a/1 - Javascript básico/Excercises/Form JS/index.html
+++ b/1 - Javascript básico/Excercises/Form JS/index.html
@@ -7,7 +7,15 @@
     <title>Form</title>
 </head>
 <body>
+    <form>
+        <fieldset id="dados-pessoas">
+            <label for="name"> </label>
+            <input id="name" type="text" placeholder="digite seu nome"/>
+        </fieldset>
+    
 
+    </form>
+    
     <script src="./index.js"> </script>
 </body>
 </html>
