--- a/1 - Javascript básico/Excercises/Form JS/index.html
+++ b/1 - Javascript básico/Excercises/Form JS/index.html
@@ -7,6 +7,10 @@
     <link href="./index.css" rel="stylesheet" type="text/css" />
     <link href="./assets/icons8-form-96.png" rel="icon" type="icon/image"/>
     <title>Form</title>
+
+    <meta name="description" content="Descubra seu IMC preenchendo um pequeno e bonito formulário.">
+    <meta name="keywords" content="formulário, imc"/>
+    <meta name="author" content="Guilherme Pires">
 </head>
 <body>
     <form>
