--- a/1 - Javascript básico/Excercises/Form JS/index.html
+++ b/1 - Javascript básico/Excercises/Form JS/index.html
@@ -10,7 +10,7 @@
 
     <meta name="description" content="Descubra seu IMC preenchendo um pequeno e bonito formulário.">
     <meta name="keywords" content="formulário, imc"/>
-    <meta name="author" content="Guilherme Pires">
+    <meta name="author" content="Guilherme">
 </head>
 <body>
     <form>
@@ -35,12 +35,12 @@
     
         <fieldset id="dados-caracteristicas">
             <label class="move">
-                <input type="text" required placeholder="1.72"/> 
+                <input type="text" title="altura" required placeholder="1.72"/> 
                 <div id='move'>Altura </div>
             </label>       
 
             <label class="move">
-                <input type="text" required placeholder="68kg"/> 
+                <input type="text" title="peso" required placeholder="68kg"/> 
                 <div id='move'>Peso </div>
             </label>      
         </fieldset>
