--- a/1 - Javascript básico/Excercises/Form JS/index.html
+++ b/1 - Javascript básico/Excercises/Form JS/index.html
@@ -27,7 +27,7 @@
             </label> 
             
             <label class="move">
-                <input type="text" title="cpf"	pattern="\d{3}\.?\d{3}\.?\d{3}-?\d{2}" oninvalid="setCustomValidity('Insira seu CPF corretamente (000.000.000-00)')" required placeholder="000.000.000-00"/> 
+                <input type="text" title="cpf" pattern="\d{3}\.?\d{3}\.?\d{3}-?\d{2}" oninvalid="setCustomValidity('Insira seu CPF corretamente (000.000.000-00)')" required placeholder="000.000.000-00"/> 
                 <div id='move'> CPF </div>
             </label> 
             
@@ -40,7 +40,7 @@
             </label>       
 
             <label class="move">
-                <input type="text" title="peso" required placeholder="68kg"/> 
+                <input type="text" title="peso" pattern="[1-9][0-9]{0,1}|100" required placeholder="68kg"/> 
                 <div id='move'>Peso </div>
             </label>      
         </fieldset>
