--- a/1 - Javascript básico/Excercises/Form JS/index.html
+++ b/1 - Javascript básico/Excercises/Form JS/index.html
@@ -22,12 +22,12 @@
             </label> 
 
             <label class="move">
-                <input type="text" title="idade" oninvalid="setCustomValidity('Insira somente números entre 0 e 100.')"  pattern="[1-9][0-9]{0,1}|100"  required placeholder="17 "/> 
+                <input type="text" title="idade" pattern="[1-9][0-9]{0,1}|100"  required placeholder="17 "/> 
                 <div id='move'> Idade </div>
             </label> 
             
             <label class="move">
-                <input type="text" title="cpf" disabled pattern="\d{3}\.?\d{3}\.?\d{3}-?\d{2}" oninvalid="setCustomValidity('Insira seu CPF corretamente (000.000.000-00)')" required placeholder="000.000.000-00"/> 
+                <input type="text" title="cpf" disabled pattern="\d{3}\.?\d{3}\.?\d{3}-?\d{2}" required placeholder="000.000.000-00"/> 
                 <div id='move'> CPF </div>
             </label> 
             
