--- a/1 - Javascript básico/Excercises/Form JS/index.html
+++ b/1 - Javascript básico/Excercises/Form JS/index.html
@@ -17,12 +17,12 @@
         <fieldset id="dados-pessoais">
 
             <label class="move">
-                <input type="text" title="nome" required placeholder="digite seu nome"/> 
+                <input type="text" id="name" title="nome" required placeholder="digite seu nome"/> 
                 <div id='move'> Nome </div>
             </label> 
 
             <label class="move">
-                <input type="text" title="idade" pattern="[1-9][0-9]{0,1}|100"  required placeholder="17 "/> 
+                <input type="text" id="age" title="idade" pattern="[1-9][0-9]{0,1}|100"  required placeholder="17 "/> 
                 <div id='move'> Idade </div>
             </label> 
             
@@ -35,12 +35,12 @@
     
         <fieldset id="dados-caracteristicas">
             <label class="move">
-                <input type="text" title="altura" required placeholder="1.72"/> 
+                <input type="text" id="altura" title="altura" required placeholder="1.72"/> 
                 <div id='move'>Altura </div>
             </label>       
 
             <label class="move">
-                <input type="text" title="peso" pattern="[1-9][0-9]{0,1}|100" required placeholder="68kg"/> 
+                <input type="text" id="peso" title="peso" pattern="[1-9][0-9]{0,1}|100" required placeholder="68kg"/> 
                 <div id='move'>Peso </div>
             </label>      
         </fieldset>
