--- a/1 - Javascript básico/Excercises/Form JS/index.html
+++ b/1 - Javascript básico/Excercises/Form JS/index.html
@@ -48,6 +48,9 @@
         <input type="submit" class="capturarEnvio" value="E N V I A R"/>
     </form>
     
+    <section id="informacoes-resultantes">
+        <h1 id="resultado"> AAAAAAAA!!!!!! </h1>
+    </section>
     <script src="./index.js"> </script>
 </body>
 </html>
