--- a/1 - Javascript básico/Excercises/Form JS/index.html
+++ b/1 - Javascript básico/Excercises/Form JS/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./index.css" rel="stylesheet" type="text/css" />
-    <link href="./assets/icons8-form-96.png" rel="icon" type="icon/image"/>
+    <link href="./assets/CSS/index.css" rel="stylesheet" type="text/css" />
+    <link href="./assets/CSS/index.css" rel="icon" type="icon/image"/>
     <title>Form</title>
 
     <meta name="description" content="Descubra seu IMC preenchendo um pequeno e bonito formulário.">
