--- a/1 - Javascript básico/Excercises/Form JS/index.html
+++ b/1 - Javascript básico/Excercises/Form JS/index.html
@@ -51,6 +51,6 @@
     <section id="informacoes-resultantes">
         <h1 id="resultado"> </h1>
     </section>
-    <script src="./index.js"> </script>
+    <script src="./assets/JS/index.js"> </script>
 </body>
 </html>
