--- a/2 - Lógica de programação/Exercises/Form 2/index.html
+++ b/2 - Lógica de programação/Exercises/Form 2/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./assets/CSS/style.css" rel="stylesheet" type="text/css" />
-    <link href="./assets/IMG/favicon-haltere.png" rel="icon" type="image/icon"
+    <link href="./assets/IMG/favicon-haltere.png" rel="icon" type="image/icon" />
 
-    <title>Form</title>
+    <title>IMC calc</title>
 </head>
 <body>
     
