--- a/2 - Lógica de programação/Exercises/Form 2/index.html
+++ b/2 - Lógica de programação/Exercises/Form 2/index.html
@@ -7,7 +7,7 @@
     <link href="./assets/CSS/style.css" rel="stylesheet" type="text/css" />
     <link href="./assets/IMG/favicon-haltere.png" rel="icon" type="image/icon" />
 
-    <title>IMC calc</title>
+    <title>IMC - Calc</title>
 </head>
 <body>
     
