--- a/2 - Lógica de programação/Exercises/Form 2/index.html
+++ b/2 - Lógica de programação/Exercises/Form 2/index.html
@@ -25,6 +25,35 @@
                         <th>Resultado </th>
                     </tr>
                 </thead>
+                <tbody>
+                    <tr>
+                        <th>Menos do que 18,5</th>
+                        <th>Abaixo do peso</th>
+                    </tr>
+                    <tr>
+                        <th>Entre 18,5 e 24,9</th>
+                        <th>Peso normal</th>
+                    </tr>
+                    <tr>
+                        <th>Entre 25 e 29,9</th>
+                        <th>Sobrepeso</th>
+                    </tr>
+                    <tr>
+                        <th>Entre 30 e 34,9</th>
+                        <th>Obesidade grau I</th>
+                    </tr>
+                    <tr>
+                        <th>Entre 35 e 39,9</th>
+                        <th>Obesidade grau II</th>
+                    </tr>
+                    <tr>
+                        <th>Mais do que 40</th>
+                        <th>Obesidade grau III</th>
+                    </tr>
+                </tbody>
+            </table>
+
+                </tbody>
             </table>
 
         </section>
