--- a/2 - Lógica de programação/Exercises/People-info/index.html
+++ b/2 - Lógica de programação/Exercises/People-info/index.html
@@ -14,5 +14,8 @@
             <input type="text"/>
             <span>Name</span>
         </label>
+
+
+        <script src="./assets/app.js"> </script>
 </body>
 </html>
