--- a/2 - Lógica de programação/Exercises/People-info/index.html
+++ b/2 - Lógica de programação/Exercises/People-info/index.html
@@ -10,10 +10,29 @@
 </head>
 <body>
     <main>
-        <label>
-            <input type="text"/>
-            <span>Name</span>
-        </label>
+        <form>
+            <label>
+                <input type="text"/>
+                <span>Name</span>
+            </label>
+
+            <label>
+                <input type="number"/>
+                <span>Age</span>
+            </label>
+
+            <label>
+                <input type="text"/>
+                <span>Country</span>
+            </label>
+
+            <label>
+                <input type="text"/>
+                <span>Email</span>
+            </label>
+        
+            <button type="submit">Enviar </button>
+        </form>
 
 
         <script src="./assets/app.js"> </script>
