--- a/2 - Lógica de programação/Exercises/People-info/index.html
+++ b/2 - Lógica de programação/Exercises/People-info/index.html
@@ -17,7 +17,7 @@
             </label>
 
             <label>
-                <input type="number"/>
+                <input type="number" pattern="^(?:[1-9]|[1-9][0-9])$"/>
                 <span>Age</span>
             </label>
 
