--- a/2 - Lógica de programação/Exercises/People-info/index.html
+++ b/2 - Lógica de programação/Exercises/People-info/index.html
@@ -12,22 +12,22 @@
     <main>
         <form>
             <label>
-                <input type="text"/>
+                <input type="text" required/>
                 <span>Name</span>
             </label>
 
             <label>
-                <input type="number" pattern="^(?:[1-9]|[1-9][0-9])$"/>
+                <input type="number" required pattern="^(?:[1-9]|[1-9][0-9])$"/>
                 <span>Age</span>
             </label>
 
             <label>
-                <input type="text"/>
+                <input type="text" required/>
                 <span>Country</span>
             </label>
 
             <label>
-                <input type="text"/>
+                <input type="text" required/>
                 <span>Email</span>
             </label>
         
