--- a/2 - Lógica de programação/Exercises/People-info/index.html
+++ b/2 - Lógica de programação/Exercises/People-info/index.html
@@ -17,7 +17,7 @@
             </label>
 
             <label>
-                <input type="number" required pattern="^(?:[4-9]|[1-9][0-9]|1[01][0-9]|120)$"/>
+                <input type="number" required title='cu'/>
                 <span>Age</span>
             </label>
 
