--- a/2 - Lógica de programação/Exercises/People-info/index.html
+++ b/2 - Lógica de programação/Exercises/People-info/index.html
@@ -12,22 +12,22 @@
     <main>
         <form>
             <label>
-                <input type="text" required/>
+                <input type="text" required class="inf"/>
                 <span>Name</span>
             </label>
 
             <label>
-                <input type="number" required title='cu'/>
+                <input type="number" class="inf" required title='cu'/>
                 <span>Age</span>
             </label>
 
             <label>
-                <input type="text" required/>
+                <input type="text" class="inf" required/>
                 <span>Country</span>
             </label>
 
             <label>
-                <input type="text" required/>
+                <input type="text"  class="inf" required/>
                 <span>Email</span>
             </label>
         
