--- a/2 - Lógica de programação/Exercises/People-info/index.html
+++ b/2 - Lógica de programação/Exercises/People-info/index.html
@@ -34,6 +34,6 @@
             <button type="submit">Enviar </button>
         </form>
 
-        <script src="./assets/app.js"> </script>
+        <script src="./assets/JS/app.js"> </script>
 </body>
 </html>
