--- a/2 - Lógica de programação/Exercises/People-info/index.html
+++ b/2 - Lógica de programação/Exercises/People-info/index.html
@@ -7,6 +7,7 @@
     <title>People - information</title>
 
     <link href="./assets/CSS/style.css" rel="stylesheet" type="text/css"/>
+    <linh href="./assets/IMGS/" rel="icon" type="x-icon/img" />
 </head>
 <body>
     <main>
