--- a/2 - Lógica de programação/Exercises/Today-s date/index.html
+++ b/2 - Lógica de programação/Exercises/Today-s date/index.html
@@ -8,6 +8,8 @@
     <link href="./assets/CSS/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    
+    <main>
+        <h1 id="sayDayAndTime"> </h1>
+    </main>
 </body>
 </html>
