--- a/2 - Lógica de programação/Exercises/Today-s date/index.html
+++ b/2 - Lógica de programação/Exercises/Today-s date/index.html
@@ -11,5 +11,7 @@
     <main>
         <h1 id="sayDayAndTime"> </h1>
     </main>
+
+    <script src="./assets/JS/app.js"> </script>
 </body>
 </html>
