--- a/2 - Lógica de programação/Exercises/Today-s date/index.html
+++ b/2 - Lógica de programação/Exercises/Today-s date/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <main>
-        <h1 id="sayDayAndTime"> </h1>
+        <section>
+            <h1 id="sayDayAndTime"></h1>
+        </section>
     </main>
 
     <script src="./assets/JS/app.js"> </script>
