--- a/2 - Lógica de programação/Exercises/For - Using DOM/index.html
+++ b/2 - Lógica de programação/Exercises/For - Using DOM/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="./assets/index.css" type="text/css" rel="stylesheet"/> 
-    
+
 </head>
 <body>
     <section>
-        <h1> Lorem ipsum dolor sit amet consectetur adipisicing elit. </h1> 
+        <h1> Lorem ipsum dolor sit amet consectetur. </h1> 
     </section>
 
     <script src="./assets/app.js"> </script>
