--- a/2 - Lógica de programação/Exercises/For - Using DOM/index.html
+++ b/2 - Lógica de programação/Exercises/For - Using DOM/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <section>
+    <section class="container">
         <h1> Lorem ipsum dolor sit amet consectetur. </h1> 
     </section>
 
