--- a/2 - Lógica de programação/Exercises/For - Using DOM/index.html
+++ b/2 - Lógica de programação/Exercises/For - Using DOM/index.html
@@ -10,6 +10,9 @@
 <body>
     <section class="container">
         <h1> Lorem ipsum dolor sit amet consectetur. </h1> 
+        <main>
+        
+        </main>
     </section>
 
     <script src="./assets/app.js"> </script>
