--- a/2 - Lógica de programação/tt.html
+++ b/2 - Lógica de programação/tt.html
@@ -20,9 +20,12 @@
     </style>
 </head>
 <body>
-    <h1 id="time"> 00:00:00
-    </h1>
+    <main>
+        <h1 id="time"> 
+        </h1>
+    </main>
 
+    
     <script>
 
     </script>
