--- a/2 - Lógica de programação/tt.html
+++ b/2 - Lógica de programação/tt.html
@@ -17,6 +17,11 @@
             justify-content: center;
             align-items: center;
         }
+
+        main{
+            background-color: white;
+            padding: 50px;
+        }
     </style>
 </head>
 <body>
@@ -25,7 +30,7 @@
         </h1>
     </main>
 
-    
+
     <script>
 
     </script>
