--- a/2 - Lógica de programação/tt.html
+++ b/2 - Lógica de programação/tt.html
@@ -10,7 +10,7 @@
             margin: 0;
             box-sizing: 0;
         } body{
-            background-color: aqua;
+            background-color: rgb(13, 55, 55);
             height: 100vh;
             width: 100%;
             display: flex;
@@ -19,20 +19,30 @@
         }
 
         main{
-            background-color: white;
-            padding: 50px;
-        }
+            background-color: rgb(233, 227, 227);
+            border-radius: 13px;
+            width: 30%;
+            padding: 10%;
+
+            display: flex;
+            font-size: larger;
+            justify-content: center;
+            flex-direction: column;
+            
+        } 
     </style>
 </head>
 <body>
     <main>
-        <h1 id="time"> 
-        </h1>
+        <h1> Timer </h1>
+        <h2 id="timer">..</h2> 
     </main>
 
 
     <script>
+        const data = new Date();
 
+        
     </script>
 </body>
 </html>
