--- a/2 - Lógica de programação/tt.html
+++ b/2 - Lógica de programação/tt.html
@@ -41,8 +41,11 @@
 
     <script>
         const data = new Date();
-
         
+        function timer(){
+
+        } 
+
     </script>
 </body>
 </html>
