--- a/2 - Lógica de programação/Exercises/Tasks/index.html
+++ b/2 - Lógica de programação/Exercises/Tasks/index.html
@@ -9,7 +9,7 @@
     <input type="text" placeholder="Type your task" class="type-task btn"/>
 
     <button class="send-task btn"> Send </button>
-
+    <ul class="task-list"> </ul>
     <script src="./app.js"> </script>
 </body>
 </html>
